--- a/app/src/main/res/layout/activity_create_quiz.xml
+++ b/app/src/main/res/layout/activity_create_quiz.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <RelativeLayout android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        xmlns:android="http://schemas.android.com/apk/res/android">
+<RelativeLayout
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       xmlns:android="http://schemas.android.com/apk/res/android">
 
        <TextView
         android:id="@+id/question"
@@ -11,7 +11,23 @@
         android:text="  You can choose questions here or add new questions.  "/>
 
         <ListView
-            android:id="@+id/list_view"
+            android:id="@+id/list_1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/button_tf"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/question" />
+
+        <ListView
+            android:id="@+id/list_2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/button_tf"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/list_1" />
+
+        <ListView
+            android:id="@+id/list_3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_above="@+id/button_tf"
@@ -32,7 +48,6 @@
             android:layout_width="130dp"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-
             android:text="Numeric" />
 
         <Button
@@ -42,6 +57,8 @@
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
             android:text="Multiple" />
-
     </RelativeLayout>
+
+
+
 
