--- a/app/src/main/res/layout/layout_tf.xml
+++ b/app/src/main/res/layout/layout_tf.xml
@@ -1,40 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="textShortMessage" />
-
-    <RadioButton
-        android:id="@+id/radioButton_true"
+    <TextView
+        android:id="@+id/question"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="question"
+        android:layout_marginBottom="20dp" />
+
+    <EditText
+        android:id="@+id/question_fragment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/question"
+        android:layout_toEndOf="@+id/question" />
+
+    <RadioButton
+        android:id="@+id/trueRadio"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/falseRadio"
+        android:layout_below="@+id/question"
+        android:layout_marginTop="35dp"
         android:text="True" />
 
     <RadioButton
-        android:id="@+id/radioButton_false"
-        android:layout_width="wrap_content"
+        android:id="@+id/falseRadio"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/trueRadio"
+        android:layout_marginEnd="20dp"
+        android:layout_marginTop="35dp"
+        android:layout_toStartOf="@+id/update"
         android:text="False" />
 
     <Button
-        android:id="@+id/tf_add"
-        android:layout_width="130dp"
+        android:id="@+id/update"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:text="ADD" />
-
+        android:text="ADD"
+        android:layout_centerInParent="true"
+        android:layout_alignParentBottom="true"/>
     <Button
-        android:id="@+id/tf_cancel"
-        android:layout_width="130dp"
+        android:id="@+id/delete"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:text="CANCEL"
         android:layout_alignParentEnd="true"
-        android:text="CANCEL" />
-</LinearLayout>
+        android:layout_alignParentBottom="true"/>
+</RelativeLayout>
